// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutocompleteComponent Basic should create 1`] = `
<gro-autocomplete>
  <input
    class="gro-input"
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Basic when click on option then panel is closed 1`] = `
<gro-autocomplete>
  <input
    class="gro-input gro-focused"
    groinput=""
    value=""
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Basic when click outside then options panel is closed 1`] = `
<gro-autocomplete>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Basic when focus then options panel is open 1`] = `
<gro-autocomplete
  class="gro-opened"
>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="Soren"
  />
  <div
    class="gro-autocomplete-options"
  >
    <span
      class="gro-option"
    >
      Gaetan
    </span>
    <span
      class="gro-option gro-selected"
    >
      Soren
    </span>
    
  </div>
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Basic when input value then displayed options are filtered 1`] = `
<gro-autocomplete
  class="gro-opened"
>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="g"
  />
  <div
    class="gro-autocomplete-options"
  >
    <span
      class="gro-option"
    >
      Gaetan
    </span>
    
  </div>
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Disabled should create 1`] = `
<gro-autocomplete
  class="gro-disabled"
  disabled="true"
>
  <input
    class="gro-input gro-disabled"
    disabled=""
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Disabled should not open on focus 1`] = `
<gro-autocomplete
  class="gro-disabled"
  disabled="true"
>
  <input
    class="gro-input gro-disabled"
    disabled=""
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Objects as values should create 1`] = `
<gro-autocomplete
  class="gro-opened"
  required="true"
>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="Soren"
  />
  <div
    class="gro-autocomplete-options"
  >
    <span
      class="gro-option"
    >
      Soren
    </span>
    <span
      class="gro-option"
    >
      Gaetan
    </span>
    
  </div>
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Open on input should not open on focus 1`] = `
<gro-autocomplete
  openon="input"
>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Open on input should open on input with value 1`] = `
<gro-autocomplete
  class="gro-opened"
  openon="input"
>
  <input
    class="gro-input"
    groinput=""
    value="s"
  />
  <div
    class="gro-autocomplete-options"
  >
    <span
      class="gro-option gro-selected"
    >
      Soren
    </span>
    
  </div>
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Reactive form should be disabled 1`] = `
<gro-autocomplete
  class="ng-untouched ng-pristine gro-disabled"
  disabled="true"
>
  <input
    class="gro-input gro-disabled"
    disabled=""
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Reactive form should create 1`] = `
<gro-autocomplete
  class="ng-untouched ng-pristine ng-valid"
>
  <input
    class="gro-input"
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Reactive form should update control on select 1`] = `
<gro-autocomplete
  class="ng-untouched ng-pristine ng-valid gro-opened"
>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="Soren"
  />
  <div
    class="gro-autocomplete-options"
  >
    <span
      class="gro-option gro-selected"
    >
      Soren
    </span>
    <span
      class="gro-option"
    >
      Gaetan
    </span>
    
  </div>
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Reactive form should update control on select 2`] = `
<gro-autocomplete
  class="ng-valid ng-touched ng-dirty"
>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="Gaetan"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Required should create 1`] = `
<gro-autocomplete
  required="true"
>
  <input
    class="gro-input"
    groinput=""
    value="Soren"
  />
  
</gro-autocomplete>
`;

exports[`AutocompleteComponent Required when required and click on selected option then value does not change 1`] = `
<gro-autocomplete
  class="gro-opened"
  required="true"
>
  <input
    class="gro-input gro-focused"
    groinput=""
    value="Soren"
  />
  <div
    class="gro-autocomplete-options"
  >
    <span
      class="gro-option"
    >
      Gaetan
    </span>
    <span
      class="gro-option gro-selected"
    >
      Soren
    </span>
    
  </div>
  
</gro-autocomplete>
`;
